// Copyright 2022 CeresDB Project Authors. Licensed under Apache-2.0.

// Types for table requests
syntax = "proto3";
package table_requests;

import "common.proto";

// Write table request
message WriteRequest {
  // Version of row encoding method
  uint32 version = 1;
  // Schema of rows
  common.TableSchema schema = 2;
  // Rows in bytes
  //
  // Each row is encoded in the same format as memtable
  repeated bytes rows = 3;
}
